<resources>
    <string name="app_name">MyPracticeMenu</string>
    <string name="action_about">關於</string>
    <string name="action_close">結束</string>
    <string name="action_dialog_message">實作與練習 Menu 和 Dialog 功能!!</string>
    <string name="action_dialog_close">關閉</string>
    <string name="label_homepage">回首頁</string>
    <string name="action_navi_railway">導航台北火車站</string>
    <string name="action_dial">撥打123</string>
    <string name="action_notification">彈出狀態欄訊息</string>
    <string name="action_preference">開啟偏好設定</string>
    <string name="uri_homepage">https://github.com/henrick168/android_practice_Menu</string>
    <string name="uri_railway">geo:25.047192, 121.516981?z=16</string>
    <string name="uri_dial">tel:123</string>
    <string name="txv_name">姓名</string>
    <string name="txv_phone">電話</string>
</resources>
