<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.leo.mypracticemenu.MainActivity">
    <item android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"
        app:showAsAction="always"/>
    <item android:id="@+id/action_navi_railway"
        android:title="@string/action_navi_railway"
        android:icon="@drawable/ic_action_map"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_dial"
        android:title="@string/action_dial"
        android:icon="@drawable/ic_action_dial"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_notification"
        android:title="@string/action_notification"/>
    <item android:id="@+id/action_close"
        android:icon="@drawable/ic_action_close"
        android:title="@string/action_close"
        app:showAsAction="ifRoom|withText"/>
</menu>